// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Easel if it matches the snapshot 1`] = `
.c0 {
  background-color: pink;
  box-sizing: border-box;
  width: 1200px;
  height: 2000px;
  min-width: 800px;
  min-height: 600px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<Theme>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "background": "#16161a",
          "primary": "#7f5af0",
          "secondary": "#72757e",
          "tertiary": "#2cb67d",
          "textPrimary": "#fffffe",
          "textSecondary": "#94a1b2",
        },
        "font": "Rubik",
        "weight": Object {
          "bold": 500,
          "normal": 400,
        },
      }
    }
  >
    <Easel
      background="pink"
      height="2000px"
      width="1200px"
    >
      <styled.div
        background="pink"
        height="2000px"
        width="1200px"
      >
        <StyledComponent
          background="pink"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bdVaJa",
                "isStatic": false,
                "lastClassName": "c0",
                "rules": Array [
                  "
  background-color: ",
                  [Function],
                  ";
  box-sizing: border-box;
  width: ",
                  [Function],
                  ";
  height: ",
                  [Function],
                  ";
  min-width: 800px;
  min-height: 600px;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bdVaJa",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          height="2000px"
          width="1200px"
        >
          <div
            className="c0"
            height="2000px"
            width="1200px"
          >
            <Artboard>
              <svg
                height="100%"
                version="1.1"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </Artboard>
          </div>
        </StyledComponent>
      </styled.div>
    </Easel>
  </ThemeProvider>
</Theme>
`;

exports[`Easel if it matches the snapshot with default settings 1`] = `
.c0 {
  background-color: #3a3a45;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  min-width: 800px;
  min-height: 600px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<Theme>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "background": "#16161a",
          "primary": "#7f5af0",
          "secondary": "#72757e",
          "tertiary": "#2cb67d",
          "textPrimary": "#fffffe",
          "textSecondary": "#94a1b2",
        },
        "font": "Rubik",
        "weight": Object {
          "bold": 500,
          "normal": 400,
        },
      }
    }
  >
    <Easel>
      <styled.div>
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bdVaJa",
                "isStatic": false,
                "lastClassName": "c0",
                "rules": Array [
                  "
  background-color: ",
                  [Function],
                  ";
  box-sizing: border-box;
  width: ",
                  [Function],
                  ";
  height: ",
                  [Function],
                  ";
  min-width: 800px;
  min-height: 600px;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bdVaJa",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="c0"
          >
            <Artboard>
              <svg
                height="100%"
                version="1.1"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </Artboard>
          </div>
        </StyledComponent>
      </styled.div>
    </Easel>
  </ThemeProvider>
</Theme>
`;
